--- a/.gitignore
+++ b/.gitignore
@@ -28585,3 +28585,22 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/01-functions/05-ref-params-class/obj/Debug/net5.0/05.ref.params.class.csproj.FileListAbsolute.txt
 /src/01-language/01-functions/05-ref-params-class/obj/Debug/netcoreapp3.1/05.ref.params.class.csproj.FileListAbsolute.txt
 /src/01-language/01-functions/06-extensions/obj/Debug/net5.0/06.extension.methods.csproj.FileListAbsolute.txt
+/src/01-language/01-functions/01-simple-case/obj/Debug/net5.0/01.simple.case.AssemblyInfo.cs
+/src/01-language/01-functions/01-simple-case/obj/Debug/net5.0/01.simple.case.AssemblyInfoInputs.cache
+/src/01-language/01-functions/01-simple-case/obj/Debug/net5.0/01.simple.case.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/01-functions/01-simple-case/obj/Debug/net5.0/01.simple.case.csprojAssemblyReference.cache
+/src/01-language/01-functions/02-optional-params/obj/Debug/net5.0/02.optional.named.params.AssemblyInfo.cs
+/src/01-language/01-functions/02-optional-params/obj/Debug/net5.0/02.optional.named.params.AssemblyInfoInputs.cache
+/src/01-language/01-functions/02-optional-params/obj/Debug/net5.0/02.optional.named.params.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/01-functions/02-optional-params/obj/Debug/net5.0/02.optional.named.params.csprojAssemblyReference.cache
+/src/01-language/01-functions/03-out-param/obj/Debug/net5.0/03.out.params.AssemblyInfo.cs
+/src/01-language/01-functions/03-out-param/obj/Debug/net5.0/03.out.params.AssemblyInfoInputs.cache
+/src/01-language/01-functions/03-out-param/obj/Debug/net5.0/03.out.params.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/01-functions/04-ref-params/obj/Debug/net5.0/04.ref.params.AssemblyInfo.cs
+/src/01-language/01-functions/04-ref-params/obj/Debug/net5.0/04.ref.params.AssemblyInfoInputs.cache
+/src/01-language/01-functions/04-ref-params/obj/Debug/net5.0/04.ref.params.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/01-functions/04-ref-params/obj/Debug/net5.0/04.ref.params.csprojAssemblyReference.cache
+/src/01-language/01-functions/05-ref-params-class/obj/Debug/net5.0/05.ref.params.class.AssemblyInfo.cs
+/src/01-language/01-functions/05-ref-params-class/obj/Debug/net5.0/05.ref.params.class.AssemblyInfoInputs.cache
+/src/01-language/01-functions/05-ref-params-class/obj/Debug/net5.0/05.ref.params.class.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/01-functions/05-ref-params-class/obj/Debug/net5.0/05.ref.params.class.csprojAssemblyReference.cache
