Prebacio sa .net core 3.1 na .net 5

--- a/.gitignore
+++ b/.gitignore
@@ -28604,3 +28604,36 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/01-functions/05-ref-params-class/obj/Debug/net5.0/05.ref.params.class.AssemblyInfoInputs.cache
 /src/01-language/01-functions/05-ref-params-class/obj/Debug/net5.0/05.ref.params.class.GeneratedMSBuildEditorConfig.editorconfig
 /src/01-language/01-functions/05-ref-params-class/obj/Debug/net5.0/05.ref.params.class.csprojAssemblyReference.cache
+/src/.vs/DotnetSamples/v16/.suo
+/src/01-language/01-functions/01-simple-case/obj
+/src/01-language/01-functions/01-simple-case/bin/Debug/net5.0
+/src/01-language/01-functions/02-optional-params/obj
+/src/01-language/01-functions/02-optional-params/bin/Debug/net5.0
+/src/01-language/01-functions/03-out-param/obj
+/src/01-language/01-functions/03-out-param/bin/Debug/net5.0
+/src/01-language/01-functions/04-ref-params/obj
+/src/01-language/01-functions/04-ref-params/bin/Debug/net5.0
+/src/01-language/01-functions/05-ref-params-class/obj
+/src/01-language/01-functions/05-ref-params-class/bin/Debug/net5.0
+/src/01-language/01-functions/06-extensions/obj
+/src/01-language/01-functions/06-extensions/bin/Debug/net5.0
+/src/01-language/02-classes/01-modifiers-public/obj
+/src/01-language/02-classes/01-modifiers-public/bin/Debug/net5.0
+/src/01-language/02-classes/02-modifiers-protected/obj
+/src/01-language/02-classes/02-modifiers-protected/bin/Debug/net5.0
+/src/01-language/02-classes/03-modifiers-internal/obj
+/src/01-language/02-classes/03-modifiers-internal/bin/Debug/net5.0
+/src/01-language/02-classes/04-modifiers-protected-internal/obj
+/src/01-language/02-classes/04-modifiers-protected-internal/bin/Debug/net5.0
+/src/01-language/02-classes/05-modifiers-private/obj
+/src/01-language/02-classes/05-modifiers-private/bin/Debug/net5.0
+/src/01-language/02-classes/06-modifiers-private-protected/obj
+/src/01-language/02-classes/06-modifiers-private-protected/bin/Debug/net5.0
+/src/01-language/02-classes/07-override/obj
+/src/01-language/02-classes/07-override/bin/Debug/net5.0
+/src/01-language/02-classes/08-hide/obj
+/src/01-language/02-classes/08-hide/bin/Debug/net5.0
+/src/01-language/02-classes/09-partial-class/obj
+/src/01-language/02-classes/09-partial-class/bin/Debug/net5.0
+/src/01-language/02-classes/10-operator-overload/obj
+/src/01-language/02-classes/10-operator-overload/bin/Debug/net5.0
