dodoa projekte pod .NET 5.0

--- a/.gitignore
+++ b/.gitignore
@@ -28637,3 +28637,58 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/02-classes/09-partial-class/bin/Debug/net5.0
 /src/01-language/02-classes/10-operator-overload/obj
 /src/01-language/02-classes/10-operator-overload/bin/Debug/net5.0
+/src/.vs/DotnetSamples/DesignTimeBuild/.dtbcache.v2
+/src/01-language/03-interfaces/01-implements/obj
+/src/01-language/03-interfaces/02-implements-explicit/obj
+/src/01-language/03-interfaces/01-implements/bin/Debug/net5.0
+/src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net5.0
+/src/01-language/04-properties/01-simple-case/bin/Debug/net5.0
+/src/01-language/04-properties/01-simple-case/obj
+/src/01-language/04-properties/02-backing-field/bin/Debug/net5.0
+/src/01-language/04-properties/02-backing-field/obj
+/src/01-language/04-properties/03-property-hide-base-class/obj
+/src/01-language/04-properties/03-property-hide-base-class/bin/Debug/net5.0
+/src/01-language/04-properties/04-property-abstract/obj
+/src/01-language/04-properties/04-property-abstract/bin/Debug/net5.0
+/src/01-language/04-properties/05-auto-implemented/obj
+/src/01-language/04-properties/05-auto-implemented/bin/Debug/net5.0
+/src/01-language/05-enums/01-simple-case/obj
+/src/01-language/05-enums/01-simple-case/bin/Debug/net5.0
+/src/01-language/05-enums/02-conversion-enum/obj
+/src/01-language/05-enums/02-conversion-enum/bin/Debug/net5.0
+/src/01-language/06-generics/00-simple-generics/obj
+/src/01-language/06-generics/00-simple-generics/bin/Debug/net5.0
+/src/01-language/06-generics/01-generic-list/obj
+/src/01-language/06-generics/01-generic-list/bin/Debug/net5.0
+/src/01-language/06-generics/02-interface-equatable/obj
+/src/01-language/06-generics/02-interface-equatable/bin/Debug/net5.0
+/src/01-language/07-indexers/01-simple-inedexer/obj
+/src/01-language/07-indexers/01-simple-inedexer/bin/Debug/net5.0
+/src/01-language/07-indexers/02-indexer-overload/obj
+/src/01-language/07-indexers/02-indexer-overload/bin/Debug/net5.0
+/src/01-language/07-indexers/03-generic-inedexer/obj
+/src/01-language/07-indexers/03-generic-inedexer/bin/Debug/net5.0
+/src/01-language/08-delegates/01-simple-delegate/obj
+/src/01-language/08-delegates/01-simple-delegate/bin/Debug/net5.0
+/src/01-language/08-delegates/02-delagates-as-parameters/obj
+/src/01-language/08-delegates/02-delagates-as-parameters/bin/Debug/net5.0
+/src/01-language/08-delegates/03-multicast-delgates/obj
+/src/01-language/08-delegates/03-multicast-delgates/bin/Debug/net5.0
+/src/01-language/08-delegates/04-anonimous-method/obj
+/src/01-language/08-delegates/04-anonimous-method/bin/Debug/net5.0
+/src/01-language/08-delegates/05-generic-delegate/obj
+/src/01-language/08-delegates/05-generic-delegate/bin/Debug/net5.0
+/src/01-language/08-delegates/06-func-delegate/obj
+/src/01-language/08-delegates/06-func-delegate/bin/Debug/net5.0
+/src/01-language/08-delegates/07-action-delegate/obj
+/src/01-language/08-delegates/07-action-delegate/bin/Debug/net5.0
+/src/01-language/08-delegates/08-predicate-delegate/obj
+/src/01-language/08-delegates/08-predicate-delegate/bin/Debug/net5.0
+/src/01-language/09-events/01-simple-event/obj
+/src/01-language/09-events/01-simple-event/bin/Debug/net5.0
+/src/01-language/09-events/02-event-handler/obj
+/src/01-language/09-events/03-pass-event-data/obj
+/src/01-language/09-events/99a-events-demo-start/DemoLibrary/bin/Debug
+/src/01-language/09-events/99a-events-demo-start/DemoLibrary/obj/Debug
+/src/01-language/09-events/99a-events-demo-start/WinFormUI/obj/Debug
+/src/01-language/09-events/99a-events-demo-start/WinFormUI/bin/Debug
