prebacio na .NET 5

--- a/.gitignore
+++ b/.gitignore
@@ -28692,3 +28692,12 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/09-events/99a-events-demo-start/DemoLibrary/obj/Debug
 /src/01-language/09-events/99a-events-demo-start/WinFormUI/obj/Debug
 /src/01-language/09-events/99a-events-demo-start/WinFormUI/bin/Debug
+/src/01-language/09-events/02-event-handler/bin/Debug/net5.0
+/src/01-language/09-events/03-pass-event-data/bin/Debug/net5.0
+/src/01-language/09-events/99b-events-demo-end/WinFormUI/obj/Debug
+/src/01-language/09-events/99b-events-demo-end/DemoLibrary/obj/Debug
+/src/01-language/10-structures/01-simple-structure/obj/Debug
+/src/01-language/10-structures/02-structures-methods-properties/obj/Debug
+/src/01-language/10-structures/03-structures-events/obj/Debug
+/src/01-language/11-lambdas/01-simple-lambda/obj/Debug
+/src/01-language/11-lambdas/02-lambda-event/obj/Debug
