Dodao projekte pod .NET 5

--- a/.gitignore
+++ b/.gitignore
@@ -28701,3 +28701,41 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/10-structures/03-structures-events/obj/Debug
 /src/01-language/11-lambdas/01-simple-lambda/obj/Debug
 /src/01-language/11-lambdas/02-lambda-event/obj/Debug
+/src/01-language/09-events/99b-events-demo-end/WinFormUI/bin/Debug
+/src/01-language/09-events/99b-events-demo-end/DemoLibrary/bin/Debug
+/src/01-language/10-structures/01-simple-structure/obj
+/src/01-language/10-structures/01-simple-structure/bin/Debug/net5.0
+/src/01-language/10-structures/02-structures-methods-properties/obj
+/src/01-language/10-structures/02-structures-methods-properties/bin/Debug/net5.0
+/src/01-language/10-structures/03-structures-events/obj
+/src/01-language/10-structures/03-structures-events/bin/Debug/net5.0
+/src/01-language/11-lambdas/01-simple-lambda/obj
+/src/01-language/11-lambdas/01-simple-lambda/bin/Debug/net5.0
+/src/01-language/11-lambdas/02-lambda-event/obj
+/src/01-language/11-lambdas/02-lambda-event/bin/Debug/net5.0
+/src/01-language/11-lambdas/03-expression-body-in-interface/obj
+/src/01-language/11-lambdas/03-expression-body-in-interface/bin/Debug/net5.0
+/src/01-language/11-lambdas/04-auto-implemented-properties/obj
+/src/01-language/11-lambdas/04-auto-implemented-properties/bin/Debug/net5.0
+/src/01-language/11-lambdas/05-initialization-expression/obj
+/src/01-language/11-lambdas/05-initialization-expression/bin/Debug/net5.0
+/src/01-language/11-lambdas/06-lambda-delegate/obj
+/src/01-language/11-lambdas/06-lambda-delegate/bin/Debug/net5.0
+/src/01-language/11-lambdas/07-lambda-inedexer/obj
+/src/01-language/11-lambdas/07-lambda-inedexer/bin/Debug/net5.0
+/src/01-language/12-tuples/01-simple-tuple/obj
+/src/01-language/12-tuples/01-simple-tuple/bin/Debug/net5.0
+/src/01-language/12-tuples/02-nested-tuples/obj
+/src/01-language/12-tuples/02-nested-tuples/bin/Debug/net5.0
+/src/01-language/12-tuples/03-tuple-in-method/obj
+/src/01-language/12-tuples/03-tuple-in-method/bin/Debug/net5.0
+/src/01-language/12-tuples/04-simple-value-tuple/obj
+/src/01-language/12-tuples/04-simple-value-tuple/bin/Debug/net5.0
+/src/01-language/12-tuples/05-value-tuple-in-method/obj
+/src/01-language/12-tuples/05-value-tuple-in-method/bin/Debug/net5.0
+/src/01-language/12-tuples/06-value-tuple-deconstruction/obj
+/src/01-language/12-tuples/06-value-tuple-deconstruction/bin/Debug/net5.0
+/src/01-language/13-async-prog/01-breakfast-sync/obj
+/src/01-language/13-async-prog/01-breakfast-sync/bin/Debug/net5.0
+/src/01-language/13-async-prog/02-brekfast-non-block-seq/obj
+/src/01-language/13-async-prog/02-brekfast-non-block-seq/bin/Debug/net5.0
