uklucio projekte pod .NET 5

--- a/.gitignore
+++ b/.gitignore
@@ -28739,3 +28739,55 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/13-async-prog/01-breakfast-sync/bin/Debug/net5.0
 /src/01-language/13-async-prog/02-brekfast-non-block-seq/obj
 /src/01-language/13-async-prog/02-brekfast-non-block-seq/bin/Debug/net5.0
+/src/01-language/08-delegates/99a-delegates-demo-start/ConsoleUI/obj/Debug
+/src/01-language/08-delegates/99a-delegates-demo-start/ConsoleUI/bin/Debug
+/src/01-language/08-delegates/99a-delegates-demo-start/ConsoleUI/README.md
+/src/01-language/08-delegates/99a-delegates-demo-start/ConsoleUI/ConsoleUI.csproj.user
+/src/01-language/08-delegates/99a-delegates-demo-start/DemoLibrary/obj/Debug
+/src/01-language/08-delegates/99a-delegates-demo-start/DemoLibrary/bin/Debug
+/src/01-language/08-delegates/99a-delegates-demo-start/DemoLibrary/README.md
+/src/01-language/08-delegates/99a-delegates-demo-start/WinFormUI/obj/Debug
+/src/01-language/08-delegates/99a-delegates-demo-start/WinFormUI/bin/Debug
+/src/01-language/08-delegates/99a-delegates-demo-start/WinFormUI/WinFormUI.csproj.user
+/src/01-language/08-delegates/99a-delegates-demo-start/WinFormUI/README.md
+/src/01-language/08-delegates/99b-delegates-demo-end/ConsoleUI/obj/Debug
+/src/01-language/08-delegates/99b-delegates-demo-end/ConsoleUI/bin/Debug
+/src/01-language/08-delegates/99b-delegates-demo-end/ConsoleUI/README.md
+/src/01-language/08-delegates/99b-delegates-demo-end/ConsoleUI/ConsoleUI.csproj.user
+/src/01-language/08-delegates/99b-delegates-demo-end/DemoLibrary/obj/Debug
+/src/01-language/08-delegates/99b-delegates-demo-end/DemoLibrary/bin/Debug
+/src/01-language/08-delegates/99b-delegates-demo-end/DemoLibrary/README.md
+/src/01-language/08-delegates/99b-delegates-demo-end/WinFormUI/obj/Debug
+/src/01-language/08-delegates/99b-delegates-demo-end/WinFormUI/bin/Debug
+/src/01-language/13-async-prog/03-brekfast-concurent-tasks/obj
+/src/01-language/13-async-prog/03-brekfast-concurent-tasks/bin/Debug/net5.0
+/src/01-language/13-async-prog/04-breakfast-tasks-composition/obj
+/src/01-language/13-async-prog/04-breakfast-tasks-composition/bin/Debug/net5.0
+/src/01-language/13-async-prog/05-breakfast-tasks-whenall/obj
+/src/01-language/13-async-prog/05-breakfast-tasks-whenall/bin/Debug/net5.0
+/src/01-language/13-async-prog/06-breakfast-tasks-whenany/obj
+/src/01-language/13-async-prog/06-breakfast-tasks-whenany/bin/Debug/net5.0
+/src/01-language/13-async-prog/98-microsoft-tutorial/ParallelAsyncExample/obj
+/src/01-language/13-async-prog/98-microsoft-tutorial/ParallelAsyncExample/bin/Debug/net5.0-windows
+/src/01-language/13-async-prog/98-microsoft-tutorial/SerialAsyncExample/obj
+/src/01-language/13-async-prog/98-microsoft-tutorial/SerialAsyncExample/bin/Debug/net5.0-windows
+/src/01-language/13-async-prog/98-microsoft-tutorial/SyncExample/obj
+/src/01-language/13-async-prog/98-microsoft-tutorial/SyncExample/bin/Debug/net5.0-windows
+/src/01-language/13-async-prog/99-tim-corey-tutorial/01-async-await/obj/Debug
+/src/01-language/13-async-prog/99-tim-corey-tutorial/01-async-await/bin/Debug
+/src/01-language/13-async-prog/99-tim-corey-tutorial/02-async-await-advanced/obj/Debug
+/src/01-language/13-async-prog/99-tim-corey-tutorial/02-async-await-advanced/bin/Debug
+/src/01-language/14-linq/01-simple-linq/obj
+/src/01-language/14-linq/01-simple-linq/bin/Debug/net5.0
+/src/01-language/14-linq/02-linq-samples/obj
+/src/01-language/14-linq/02-linq-samples/bin/Debug/net5.0
+/src/01-language/15-nullable/01-simple-nullable/obj
+/src/01-language/15-nullable/01-simple-nullable/bin/Debug/net5.0
+/src/01-language/16-records/01-simple-records/obj
+/src/01-language/16-records/01-simple-records/bin/Debug/net5.0
+/src/01-language/16-records/02-positional-records/obj
+/src/01-language/16-records/02-positional-records/bin/Debug/net5.0
+/src/01-language/16-records/03-positional-records-short/obj
+/src/01-language/16-records/03-positional-records-short/bin/Debug/net5.0
+/src/01-language/16-records/04-records-inheritance/obj
+/src/01-language/16-records/04-records-inheritance/bin/Debug/net5.0
