--- a/.gitignore
+++ b/.gitignore
@@ -28791,3 +28791,5 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/16-records/03-positional-records-short/bin/Debug/net5.0
 /src/01-language/16-records/04-records-inheritance/obj
 /src/01-language/16-records/04-records-inheritance/bin/Debug/net5.0
+/src/01-language/08-delegates/99b-delegates-demo-end/WinFormUI/WinFormUI.csproj.user
+/src/01-language/08-delegates/99b-delegates-demo-end/WinFormUI/README.md
