--- a/.gitignore
+++ b/.gitignore
@@ -29150,3 +29150,4 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/16-records/04-records-inheritance/bin/Debug/net6.0/04.records.inheritance.exe
 /src/01-language/16-records/04-records-inheritance/bin/Debug/net6.0/04.records.inheritance.dll
 /src/01-language/16-records/04-records-inheritance/bin/Debug/net6.0/04.records.inheritance.deps.json
+/src/.vs/DotnetSamples/FileContentIndex/d9d5bcc3-9edf-4360-9f90-75a19411a121.vsidx
