--- a/.gitignore
+++ b/.gitignore
@@ -29151,3 +29151,7 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/16-records/04-records-inheritance/bin/Debug/net6.0/04.records.inheritance.dll
 /src/01-language/16-records/04-records-inheritance/bin/Debug/net6.0/04.records.inheritance.deps.json
 /src/.vs/DotnetSamples/FileContentIndex/d9d5bcc3-9edf-4360-9f90-75a19411a121.vsidx
+/src/.vs/ProjectEvaluation/dotnetsamples.projects.v5.1
+/src/.vs/ProjectEvaluation/dotnetsamples.metadata.v5.1
+/src/.vs/DotnetSamples/v17/.futdcache.v2
+/src/.vs/DotnetSamples/FileContentIndex/72c5d46b-8bab-41b0-8360-bce6d62bdb66.vsidx
