--- a/.gitignore
+++ b/.gitignore
@@ -29156,3 +29156,62 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/.vs/DotnetSamples/v17/.futdcache.v2
 /src/.vs/DotnetSamples/FileContentIndex/72c5d46b-8bab-41b0-8360-bce6d62bdb66.vsidx
 *.vsidx
+/src/01-language/02-classes/00-inheritance-constructor/bin/Debug
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/_IsIncrementalBuild
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/refint/01.modifiers.public.dll
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/refint/00.inheritance.constructor.dll
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/refint
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/ref/01.modifiers.public.dll
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/ref/00.inheritance.constructor.dll
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/ref
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/apphost.exe
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/01.modifiers.public.pdb
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/01.modifiers.public.genruntimeconfig.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/01.modifiers.public.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/01.modifiers.public.dll
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/01.modifiers.public.csproj.FileListAbsolute.txt
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/01.modifiers.public.csproj.CoreCompileInputs.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/01.modifiers.public.csproj.AssemblyReference.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/01.modifiers.public.assets.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/01.modifiers.public.AssemblyInfoInputs.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/01.modifiers.public.AssemblyInfo.cs
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/00.inheritance.constructor.pdb
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/00.inheritance.constructor.genruntimeconfig.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/00.inheritance.constructor.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/00.inheritance.constructor.dll
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/00.inheritance.constructor.csproj.FileListAbsolute.txt
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/00.inheritance.constructor.csproj.CoreCompileInputs.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/00.inheritance.constructor.csproj.AssemblyReference.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/00.inheritance.constructor.assets.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/00.inheritance.constructor.AssemblyInfoInputs.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/00.inheritance.constructor.AssemblyInfo.cs
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net6.0
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/ref/01.modifiers.public.dll
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/apphost.exe
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/01.modifiers.public.pdb
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/01.modifiers.public.genruntimeconfig.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/01.modifiers.public.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/01.modifiers.public.dll
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/01.modifiers.public.csprojAssemblyReference.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/01.modifiers.public.csproj.FileListAbsolute.txt
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/01.modifiers.public.csproj.CoreCompileInputs.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/01.modifiers.public.csproj.AssemblyReference.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/01.modifiers.public.assets.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/01.modifiers.public.AssemblyInfoInputs.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/01.modifiers.public.AssemblyInfo.cs
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net5.0/.NETCoreApp,Version=v5.0.AssemblyAttributes.cs
+/src/01-language/02-classes/00-inheritance-constructor/obj/project.nuget.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/project.assets.json
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/netcoreapp3.1/01.modifiers.public.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/netcoreapp3.1/01.modifiers.public.csprojAssemblyReference.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/netcoreapp3.1/01.modifiers.public.assets.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/netcoreapp3.1/01.modifiers.public.AssemblyInfoInputs.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/netcoreapp3.1/01.modifiers.public.AssemblyInfo.cs
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+/src/01-language/02-classes/00-inheritance-constructor/obj/01.modifiers.public.csproj.nuget.g.targets
+/src/01-language/02-classes/00-inheritance-constructor/obj/01.modifiers.public.csproj.nuget.g.props
+/src/01-language/02-classes/00-inheritance-constructor/obj/01.modifiers.public.csproj.nuget.dgspec.json
+/src/01-language/02-classes/00-inheritance-constructor/obj/00.inheritance.constructor.csproj.nuget.g.targets
+/src/01-language/02-classes/00-inheritance-constructor/obj/00.inheritance.constructor.csproj.nuget.g.props
+/src/01-language/02-classes/00-inheritance-constructor/obj/00.inheritance.constructor.csproj.nuget.dgspec.json
