preimenovao i dodao komentre zakljucno sa 02-02

--- a/.gitignore
+++ b/.gitignore
@@ -29215,3 +29215,11 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/02-classes/00-inheritance-constructor/obj/00.inheritance.constructor.csproj.nuget.g.targets
 /src/01-language/02-classes/00-inheritance-constructor/obj/00.inheritance.constructor.csproj.nuget.g.props
 /src/01-language/02-classes/00-inheritance-constructor/obj/00.inheritance.constructor.csproj.nuget.dgspec.json
+/src/01-language/02-classes/00-inheritance-constructor/obj/01.inheritance.constructor.csproj.nuget.g.targets
+/src/01-language/02-classes/00-inheritance-constructor/obj/01.inheritance.constructor.csproj.nuget.g.props
+/src/01-language/02-classes/00-inheritance-constructor/obj/01.inheritance.constructor.csproj.nuget.dgspec.json
+/src/01-language/02-classes/01-modifiers-public/bin/Debug/net6.0/00.modifiers.public.runtimeconfig.json
+/src/01-language/02-classes/01-modifiers-public/bin/Debug/net6.0/00.modifiers.public.pdb
+/src/01-language/02-classes/01-modifiers-public/bin/Debug/net6.0/00.modifiers.public.exe
+/src/01-language/02-classes/01-modifiers-public/bin/Debug/net6.0/00.modifiers.public.dll
+/src/01-language/02-classes/01-modifiers-public/bin/Debug/net6.0/00.modifiers.public.deps.json
