--- a/.gitignore
+++ b/.gitignore
@@ -29223,3 +29223,37 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/02-classes/01-modifiers-public/bin/Debug/net6.0/00.modifiers.public.exe
 /src/01-language/02-classes/01-modifiers-public/bin/Debug/net6.0/00.modifiers.public.dll
 /src/01-language/02-classes/01-modifiers-public/bin/Debug/net6.0/00.modifiers.public.deps.json
+/src/01-language/01-functions/03-ref-params/bin/Debug/net6.0/03.ref.params.runtimeconfig.json
+/src/01-language/01-functions/03-ref-params/bin/Debug/net6.0/03.ref.params.pdb
+/src/01-language/01-functions/03-ref-params/bin/Debug/net6.0/03.ref.params.exe
+/src/01-language/01-functions/03-ref-params/bin/Debug/net6.0/03.ref.params.dll
+/src/01-language/01-functions/03-ref-params/bin/Debug/net6.0/03.ref.params.deps.json
+/src/01-language/01-functions/03-ref-params/obj/project.nuget.cache
+/src/01-language/01-functions/03-ref-params/obj/project.assets.json
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/_IsIncrementalBuild
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/refint/03.ref.params.dll
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/refint
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/ref/03.ref.params.dll
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/apphost.exe
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/03.ref.params.pdb
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/03.ref.params.genruntimeconfig.cache
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/03.ref.params.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/03.ref.params.dll
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/03.ref.params.csproj.FileListAbsolute.txt
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/03.ref.params.csproj.CoreCompileInputs.cache
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/03.ref.params.csproj.AssemblyReference.cache
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/03.ref.params.assets.cache
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/03.ref.params.AssemblyInfoInputs.cache
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0/03.ref.params.AssemblyInfo.cs
+/src/01-language/01-functions/03-ref-params/obj/03.ref.params.csproj.nuget.g.targets
+/src/01-language/01-functions/03-ref-params/obj/03.ref.params.csproj.nuget.g.props
+/src/01-language/01-functions/03-ref-params/obj/03.ref.params.csproj.nuget.dgspec.json
+/src/01-language/01-functions/04-ref-params-class/bin/Debug/net6.0
+/src/01-language/01-functions/04-ref-params-class/obj
+/src/01-language/01-functions/05-out-params/bin/Debug/net6.0
+/src/01-language/01-functions/05-out-params/obj
+/src/01-language/01-functions/06-in-params/bin/Debug/net6.0
+/src/01-language/01-functions/06-in-params/obj
+/src/01-language/01-functions/07-extension-methods/bin/Debug/net6.0
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/refint/07.extension.methods.dll
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/ref/07.extension.methods.dll
