--- a/.gitignore
+++ b/.gitignore
@@ -29257,3 +29257,11 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/01-functions/07-extension-methods/bin/Debug/net6.0
 /src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/refint/07.extension.methods.dll
 /src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/ref/07.extension.methods.dll
+/src/01-language/01-functions/07-extension-methods/obj/project.nuget.cache
+/src/01-language/01-functions/07-extension-methods/obj/project.assets.json
+/src/01-language/01-functions/07-extension-methods/obj/07.extension.methods.csproj.nuget.g.targets
+/src/01-language/01-functions/07-extension-methods/obj/07.extension.methods.csproj.nuget.g.props
+/src/01-language/01-functions/07-extension-methods/obj/07.extension.methods.csproj.nuget.dgspec.json
+/src/01-language/01-functions/07-extension-methods/obj/06.extension.methods.csproj.nuget.g.targets
+/src/01-language/01-functions/07-extension-methods/obj/06.extension.methods.csproj.nuget.g.props
+/src/01-language/01-functions/07-extension-methods/obj/06.extension.methods.csproj.nuget.dgspec.json
