--- a/.gitignore
+++ b/.gitignore
@@ -29265,3 +29265,17 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/01-functions/07-extension-methods/obj/06.extension.methods.csproj.nuget.g.targets
 /src/01-language/01-functions/07-extension-methods/obj/06.extension.methods.csproj.nuget.g.props
 /src/01-language/01-functions/07-extension-methods/obj/06.extension.methods.csproj.nuget.dgspec.json
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/_IsIncrementalBuild
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/apphost.exe
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/07.extension.methods.pdb
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/07.extension.methods.genruntimeconfig.cache
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/07.extension.methods.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/07.extension.methods.dll
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/07.extension.methods.csproj.FileListAbsolute.txt
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/07.extension.methods.csproj.CoreCompileInputs.cache
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/07.extension.methods.csproj.AssemblyReference.cache
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/07.extension.methods.assets.cache
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/07.extension.methods.AssemblyInfoInputs.cache
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/07.extension.methods.AssemblyInfo.cs
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/06.extension.methods.assets.cache
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/06.extension.methods.csproj.AssemblyReference.cache
