--- a/.gitignore
+++ b/.gitignore
@@ -29279,3 +29279,4 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/07.extension.methods.AssemblyInfo.cs
 /src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/06.extension.methods.assets.cache
 /src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/06.extension.methods.csproj.AssemblyReference.cache
+.vs/slnx.sqlite-journal
