--- a/.gitignore
+++ b/.gitignore
@@ -29280,3 +29280,28 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/06.extension.methods.assets.cache
 /src/01-language/01-functions/07-extension-methods/obj/Debug/net6.0/06.extension.methods.csproj.AssemblyReference.cache
 .vs/slnx.sqlite-journal
+/.vs/MatfRS2----primeri-predavanja/v17/.suo
+/.vs/MatfRS2----primeri-predavanja/FileContentIndex/read.lock
+/src/01-language/06-generics/03-generic-constraints/obj/Debug/netcoreapp3.1
+/src/01-language/02-classes/00-inheritance-constructor/obj/Release/net6.0
+/src/01-language/01-functions/07-extension-methods/obj/Release/net6.0
+/src/01-language/01-functions/03-ref-params/obj/Release/net6.0
+/src/02-database-interaction/01-ef-mysql/obj/Release/netcoreapp3.1
+/src/02-database-interaction/01-ef-mysql/obj/Debug/netcoreapp3.1
+/src/01-language/13-async-prog/99-tim-corey-tutorial/02-async-await-advanced/obj/Release
+/src/01-language/13-async-prog/99-tim-corey-tutorial/01-async-await/obj/Release
+/src/01-language/09-events/99b-events-demo-end/WinFormUI/obj/Release
+/src/01-language/09-events/99b-events-demo-end/DemoLibrary/obj/Release
+/src/01-language/09-events/99a-events-demo-start/WinFormUI/obj/Release
+/src/01-language/09-events/99a-events-demo-start/DemoLibrary/obj/Release
+/src/01-language/08-delegates/99b-delegates-demo-end/WinFormUI/obj/Release
+/src/01-language/08-delegates/99b-delegates-demo-end/DemoLibrary/obj/Release
+/src/01-language/08-delegates/99b-delegates-demo-end/ConsoleUI/obj/Release
+/src/01-language/08-delegates/99a-delegates-demo-start/WinFormUI/obj/Release
+/src/01-language/08-delegates/99a-delegates-demo-start/DemoLibrary/obj/Release
+/src/01-language/08-delegates/99a-delegates-demo-start/ConsoleUI/obj/Release
+/src/01-language/06-generics/03-generic-constraints/obj/Release/netcoreapp3.1
+/src/02-database-interaction/03-ef-both-mysql-ms-sql/obj/Release/netcoreapp3.1
+/src/02-database-interaction/03-ef-both-mysql-ms-sql/obj/Debug/netcoreapp3.1
+/src/02-database-interaction/02-ef-ms-sql-server/obj/Release/netcoreapp3.1
+/src/02-database-interaction/02-ef-ms-sql-server/obj/Debug/netcoreapp3.1
