--- a/src/02-database-interaction/01-ef-mysql/HelloConsoleEfMySql.csproj
+++ b/src/02-database-interaction/01-ef-mysql/HelloConsoleEfMySql.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.15" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.7" />
   </ItemGroup>
 
 </Project>
