--- a/.gitignore
+++ b/.gitignore
@@ -29312,3 +29312,5 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/02-database-interaction/01-ef-mysql/bin/Debug/net6.0
 /src/02-database-interaction/02-ef-ms-sql-server/bin/Debug/netcoreapp3.1
 /src/02-database-interaction/03-ef-both-mysql-ms-sql/bin/Debug/netcoreapp3.1
+/src/02-database-interaction/02-ef-ms-sql-server/bin/Debug/net6.0
+/src/02-database-interaction/03-ef-both-mysql-ms-sql/bin/Debug/net6.0
