dodao primere za atribute

--- a/.gitignore
+++ b/.gitignore
@@ -29328,3 +29328,12 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/16-linq/01-simple-linq/obj
 /src/01-language/16-linq/02-linq-samples/bin/Debug/net6.0
 /src/01-language/16-linq/02-linq-samples/obj
+/src/01-language/01-functions/03-ref-params/obj/Debug/net6.0
+/src/01-language/16-attributes/01-simple-attributes/bin/Debug/net6.0
+/src/01-language/16-attributes/01-simple-attributes/obj
+/src/01-language/16-attributes/02-custom-attribute/bin/Debug/net6.0
+/src/01-language/16-attributes/02-custom-attribute/obj
+/src/01-language/17-linq/01-simple-linq/bin/Debug/net6.0
+/src/01-language/17-linq/01-simple-linq/obj
+/src/01-language/17-linq/02-linq-samples/bin/Debug/net6.0
+/src/01-language/17-linq/02-linq-samples/obj
