--- a/.gitignore
+++ b/.gitignore
@@ -29339,3 +29339,21 @@ docker/_geting_started/08-multy-container/app/node_modules/minimist/test/dash.js
 /src/01-language/17-linq/02-linq-samples/obj
 /src/01-language/01-functions/01-simple-case/bin/Debug/net7.0
 /src/01-language/01-functions/02-optional-params/bin/Debug/net7.0
+src/01-language/04-properties/02-backing-field/bin/Debug/net7.0/02.property.backing.field.dll
+src/.vs/ProjectEvaluation/dotnetsamples.metadata.v7.bin
+src/.vs/ProjectEvaluation/dotnetsamples.projects.v7.bin
+src/01-language/04-properties/02-backing-field/bin/Debug/net7.0/02.property.backing.field.pdb
+src/01-language/04-properties/03-property-hide-base-class/bin/Debug/net7.0/03.prpoperty.hiding.dll
+src/01-language/04-properties/03-property-hide-base-class/bin/Debug/net7.0/03.prpoperty.hiding.pdb
+src/01-language/05-enums/01-simple-case/bin/Debug/net7.0/01.simple.enum.dll
+src/01-language/05-enums/01-simple-case/bin/Debug/net7.0/01.simple.enum.pdb
+src/01-language/07-indexers/01-simple-inedexer/bin/Debug/net7.0/01.simple.indexer.dll
+src/01-language/04-properties/02-backing-field/bin/Debug/net7.0/02.property.backing.field.dll
+src/.vs/ProjectEvaluation/dotnetsamples.metadata.v7.bin
+src/.vs/ProjectEvaluation/dotnetsamples.projects.v7.bin
+src/01-language/04-properties/02-backing-field/bin/Debug/net7.0/02.property.backing.field.pdb
+src/01-language/04-properties/03-property-hide-base-class/bin/Debug/net7.0/03.prpoperty.hiding.dll
+src/01-language/04-properties/03-property-hide-base-class/bin/Debug/net7.0/03.prpoperty.hiding.pdb
+src/01-language/05-enums/01-simple-case/bin/Debug/net7.0/01.simple.enum.dll
+src/01-language/05-enums/01-simple-case/bin/Debug/net7.0/01.simple.enum.pdb
+src/01-language/07-indexers/01-simple-inedexer/bin/Debug/net7.0/01.simple.indexer.dll
