--- a/.gitignore
+++ b/.gitignore
@@ -29357,3 +29357,19 @@ src/01-language/04-properties/03-property-hide-base-class/bin/Debug/net7.0/03.pr
 src/01-language/05-enums/01-simple-case/bin/Debug/net7.0/01.simple.enum.dll
 src/01-language/05-enums/01-simple-case/bin/Debug/net7.0/01.simple.enum.pdb
 src/01-language/07-indexers/01-simple-inedexer/bin/Debug/net7.0/01.simple.indexer.dll
+src/.vs/ProjectEvaluation/dotnetsamples.metadata.v7.bin
+src/.vs/ProjectEvaluation/dotnetsamples.projects.v7.bin
+src/01-language/09-events/02-event-handler/bin/Debug/net7.0/02.event.handler.dll
+src/01-language/09-events/02-event-handler/bin/Debug/net7.0/02.event.handler.pdb
+src/01-language/09-events/03-pass-event-data/bin/Debug/net7.0/03.pass.event.data.dll
+src/01-language/09-events/03-pass-event-data/bin/Debug/net7.0/03.pass.event.data.pdb
+src/01-language/10-structures/01-simple-structure/bin/Debug/net7.0/01.simple.structure.dll
+src/01-language/10-structures/01-simple-structure/bin/Debug/net7.0/01.simple.structure.pdb
+src/01-language/10-structures/03-structures-events/bin/Debug/net7.0/03.structures.events.dll
+src/01-language/10-structures/03-structures-events/bin/Debug/net7.0/03.structures.events.pdb
+src/01-language/11-lambdas/01-simple-lambda/bin/Debug/net7.0/01.simple.lambda.dll
+src/01-language/11-lambdas/01-simple-lambda/bin/Debug/net7.0/01.simple.lambda.pdb
+src/01-language/12-tuples/01-simple-tuple/bin/Debug/net7.0/01.simple.tuple.dll
+src/01-language/12-tuples/01-simple-tuple/bin/Debug/net7.0/01.simple.tuple.pdb
+src/01-language/17-linq/02-linq-samples/bin/Debug/net7.0/02.linq.samples.dll
+src/01-language/17-linq/02-linq-samples/bin/Debug/net7.0/02.linq.samples.pdb
